--- a/nar.cabal
+++ b/nar.cabal
@@ -26,8 +26,11 @@ data-files:          README.md
 Library
   Exposed-modules:   Archive.Nar
   Other-modules:     Archive.Nar.Types
+                   , Archive.Nar.Serialization
+                   , Archive.Nar.UTF8
   Build-depends:     base >= 4 && < 5
                    , bytestring
+                   , zlib
   ghc-options:       -Wall -fwarn-tabs
 
 --Executable           nar
@@ -36,18 +39,19 @@ Library
 --  Hs-Source-Dirs:    .
 --  Build-depends:     base >= 4 && < 5
 
---Test-Suite test-nar
---  type:              exitcode-stdio-1.0
---  hs-source-dirs:    tests
---  Main-is:           Tests.hs
---  Build-Depends:     base >= 3 && < 5
---                   , mtl
---                   , QuickCheck >= 2
---                   , HUnit
---                   , test-framework
---                   , test-framework-quickcheck2
---                   , test-framework-hunit
---  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures
+Test-Suite test-nar
+  type:              exitcode-stdio-1.0
+  hs-source-dirs:    tests .
+  Main-is:           Tests.hs
+  Build-Depends:     base >= 3 && < 5
+                   , mtl
+                   , QuickCheck >= 2
+                   , HUnit
+                   , test-framework
+                   , test-framework-quickcheck2
+                   , test-framework-hunit
+                   , bytestring
+  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures
 
 source-repository head
   type: git
