--- a/nar.cabal
+++ b/nar.cabal
@@ -30,6 +30,7 @@ Library
                    , Archive.Nar.UTF8
   Build-depends:     base >= 4 && < 5
                    , bytestring
+                   , ghc-prim
                    , zlib
   ghc-options:       -Wall -fwarn-tabs
 
@@ -44,6 +45,7 @@ Test-Suite test-nar
   hs-source-dirs:    tests .
   Main-is:           Tests.hs
   Build-Depends:     base >= 3 && < 5
+                   , ghc-prim
                    , mtl
                    , tasty
                    , tasty-quickcheck
